lineWrapping && fix padding outside

--- a/mindpress-fe/assets/css/app.css
+++ b/mindpress-fe/assets/css/app.css
@@ -390,6 +390,8 @@ input[type=title] {
   background-color: #fbfcfc;
   font-weight: 400;
   font-size: larger;
+  padding: 0.75rem 1rem;
+  width: calc(100% - 2rem);
 }
 
 .preview-wrapper {
